--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 click
 
 # faster json
-orjson  # ~=3.8.3
+orjson
 
 # pluralization
 inflection~=0.5.1
@@ -20,9 +20,17 @@ flatten_json
 #
 dataclass-csv
 
-#
+# data dictionary and PFB
 gen3
 
 # faster requests
 requests
 requests-cache
+
+# function caching
+joblib
+# html parsing (urn:oid lookups)
+beautifulsoup4
+
+# faster json schema
+fastjsonschema
