tiny fix observation file

--- a/omop-fhir-translator/omop_to_fhir/observation_omop_to_fhir.yaml
+++ b/omop-fhir-translator/omop_to_fhir/observation_omop_to_fhir.yaml
@@ -34,7 +34,7 @@ pipelines:
         gpython: |
           def fix(row):
             return {
-              "concept_id": str(int(row["concept_id"])),
+              "concept_id": str(row["concept_id"]),
               "vocabulary_id": str(row["vocabulary_id"]),
               "concept_code": str(row["concept_code"]),
               "concept_class_id": str(row["concept_class_id"]),
