--- a/omop-fhir-translator/omop_to_fhir/specimen_omop_to_fhir.yaml
+++ b/omop-fhir-translator/omop_to_fhir/specimen_omop_to_fhir.yaml
@@ -30,7 +30,7 @@ pipelines:
         gpython: |
           def fix(row):
             return {
-              "concept_id": str(int(row["concept_id"])),
+              "concept_id": str(row["concept_id"]),
               "vocabulary_id": str(row["vocabulary_id"]),
               "concept_name": str(row["concept_name"]),
               "concept_code": str(row["concept_code"])
@@ -182,18 +182,44 @@ pipelines:
           key: concept_id
         lookup: "{{row.value}}"
         copy: 
-          concept_id: concept_id
-          specimen_vocab_concept_id: concept_code
+          Anatomic_concept_id: concept_id
+          specimen_vocab_concept_code: concept_code
           specimen_anatomic_concept_name: concept_name
+          specimen_vocab_id: vocabulary_id
     - map:
         method: fix
         gpython: |
           def fix(row):
-            if "specimen_vocab_concept_id" in row:
-              row["includedStructure"][0]["structure"]["coding"][0]["code"] = row["specimen_vocab_concept_id"]
+            print(row["value"])
+            vocab_code_to_display = {
+              "NUCC": "https://www.nucc.org/",
+              "CMS Place of Service": "https://www.cms.gov/Medicare/Coding/place-of-service-codes",
+              "SNOMED":"http://snomed.info/sct/",
+              "LOINC": "https://loinc.org/",
+              "Visit": "https://athena.ohdsi.org/search-terms/terms/",
+              "Type Concept": "https://athena.ohdsi.org/search-terms/terms/",
+              "ICD9CM": "https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes",
+              "ICD10CM": "https://icd10cmtool.cdc.gov/",
+              "SOPT": "https://www.nahdo.org/sopt",
+              "Relationship": "https://athena.ohdsi.org/search-terms/terms/",
+              "Vocabulary": "https://athena.ohdsi.org/search-terms/terms/",
+              "UCUM": "https://ucum.org/",
+              "MeSH": "https://www.nlm.nih.gov/research/umls/licensedcontent/umlsknowledgesources.html",
+              "NDFRT": 'https://www.nlm.nih.gov/research/umls/rxnorm/docs/rxnormfiles.html',
+              "Condition Type": "https://athena.ohdsi.org/search-terms/terms/",
+              "NDC": "https://www.nlm.nih.gov/research/umls/rxnorm/docs/rxnormfiles.html",
+              "RxNorm": "https://www.nlm.nih.gov/research/umls/rxnorm/docs/rxnormfiles.html",
+              "RxNorm Extension": "https://www.nlm.nih.gov/research/umls/rxnorm/docs/rxnormfiles.html", #note sure about this one
+            }
+
+            if "value" in row:
+              row["includedStructure"][0]["structure"]["coding"][0]["code"] = row["specimen_vocab_concept_code"]
               row["includedStructure"][0]["structure"]["coding"][0]["display"] = row["specimen_anatomic_concept_name"]
+              row["includedStructure"][0]["structure"]["coding"][0]["system"] = vocab_code_to_display[row["specimen_vocab_id"]]
+
               del(row["specimen_anatomic_concept_name"])
-              del(row["specimen_vocab_concept_id"])
+              del(row["specimen_vocab_concept_code"])
+              del(row["specimen_vocab_id"])
 
             return row
   
